--- a/src/main.css
+++ b/src/main.css
@@ -28,7 +28,8 @@ body {
 }
 
 .header {
-  background-image: url('./images/header-background.jpg');
+  /* background-image: url('./images/header-background.jpg');*/
+  padding: 10px;
   background-size: cover;
   background-position: center;
   position: relative;
@@ -41,14 +42,15 @@ body {
   left: 0;
   top: 0;
   background: rgba(0, 0, 0, 0.6);
+  display: none;
 }
 
 .description {
-  left: 50%;
-  position: absolute;
-  top: 45%;
-  transform: translate(-50%, -55%);
+  margin: 4px auto 20px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .description h1 {
@@ -59,4 +61,62 @@ body {
   color: #fff;
   font-size: 1.3rem;
   line-height: 1.5;
+}
+
+#symbols-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+#symbols-content .button {
+  margin: 10px 8px;
+}
+
+.launch-button {
+  align-self: center;
+}
+
+.button {
+  background-color: #CACACA;
+  font-weight: bold;
+  padding: 8px 10px;
+  min-width: 80px;
+  width: fit-content;
+  /*border: solid 4px #444444;*/
+  box-shadow: 0 0 5px -1px rgba(0,0,0,0.2);
+  cursor: pointer;
+  white-space: nowrap;
+  vertical-align: middle;
+  touch-action: manipulation;
+  user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  text-align: center;
+  
+  color: #333;
+  background-color: #fff;
+  border-color: #ccc;
+
+}
+.button:hover {
+  background-color: #e6e6e6;
+  border-color: #adadad;
+}
+.button:active {
+  background-color: #c0c0c0;
+  box-shadow: 0 0 5px -1px rgba(0,0,0,0.6);
+  border: none;
+}
+.button:focus {
+  border-color: #aa0000;
+}
+
+#symbols-content .individual {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  height: fit-content;
+  max-width: 50%;
 }
